[package]
name = "xihydra-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", default-features = false, features = [
    "x11",
    "webgl2",
    "png",
    "bevy_pbr",
    "bevy_core_pipeline",
    "bevy_asset",
    "tonemapping_luts",
] }
bevy_egui = "0.28.0"
bytemuck = "1.16.3"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
